# claude-slack-to-notion

./: .env.example  .gitignore  .mcp.json  .mcpbignore  CLAUDE.md  LICENSE  README.md  manifest.json  pyproject.toml
.claude/: README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: auto-tag.yml  claude-devex-update.yml  pypi-publish.yml
docs/: blog-draft-58.md  decisions.md  development.md  setup-guide.md  tools.md  troubleshooting.md
docs/dev-log/: issue-15.md  issue-56.md
scripts/: setup.sh
src/slack_to_notion/: __init__.py  __main__.py  analyzer.py  mcp_server.py  notion_client.py  slack_client.py
tests/: test_analyzer.py  test_mcp_server.py  test_notion_client.py  test_slack_client.py
