[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-to-notion-mcp"
version = "1.1.0"
description = "Slack 메시지/스레드를 분석하여 Notion 페이지로 정리하는 MCP 서버"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [{ name = "idean3885" }]
keywords = ["slack", "notion", "mcp", "claude-code"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "slack_sdk>=3.27.0",
    "notion-client>=2.2.0",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
slack-to-notion-mcp = "slack_to_notion.mcp_server:main"

[project.urls]
Homepage = "https://github.com/idean3885/claude-slack-to-notion"
Repository = "https://github.com/idean3885/claude-slack-to-notion"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
